# sfSnake

./: .gitignore  CMakeLists.txt  Fruit.cpp  Fruit.h  Game.cpp  Game.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  Screen.h  Snake.cpp  Snake.h
Sounds/: pickup_failed.aiff
